<resources>
    <string name="app_name">The Love Dare</string>

    <string name="SHARED_PREFS">
        edu.uw.tacoma.arielm3.thelovedareproject.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="ACCT_FILE">edu.uw.tacoma.arielm3.theloveproject.ACCT_FILE</string>


    <!-- Login Activity and fragments -->
    <string name="user_email">Enter Email Address</string>
    <string name="user_register_email">Enter Your Email Address</string>
    <string name="user_password">Enter Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="sign_up_text">Sign Up</string>

    <!-- Main Menu Activity and fragments -->
    <string name="logout_text">Logout</string>
    <string name="welcome_message">Welcome to the\nLove Dare!</string>
    <string name="verse_of_day">Verse of the Day</string>
    <string name="daily_challenge">Daily Challenge</string>
    <string name="about">About</string>

    <!-- Verse of the Day button Share -->
    <string name="share">Share</string>

    <!-- Today's Challenge Fragment -->
    <string name="todays_dare">Today\'s Dare</string>
    <string name="reflect_text">Reflection</string>
    <string name="reflection">reflection</string>

    <!-- General Options for dialog boxes -->
    <string name="ok_text">OK</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>

    <!-- Reflection Strings -->
    <string name="reflect_intro_text">Did the day go as expected?
        \nReflect about it and make some notes to look back on:</string>
    <string name="hint_reflection">Write your thoughts here.</string>

    <!-- About information -->
    <string name="about_text_information">Warning! Once you log out, all data saved in reflections
        will be deleted. You can share your thoughts to another program if you desire to keep them
        when you log out.

        \n\nAll the content was
        from the Book The Love Dare as seen in the movie Fireproof.

        \n\nCopyright: Kendrick, Stephen, and Alex Kendrick. The Love Dare .
        Nashville: B and H Group,2008. Print.

        \n\nAll images were found on Google Images. All rights belong to the original owner. </string>


    <!-- Picture description -->
    <string name="theme">Fall Theme</string>
    <string name="aboutTitle">About the Love Dare</string>


</resources>
