<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.coconuts.ariel.thelovedareproject.controller.login.LoginFragment"
             android:orientation="vertical"
              >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/love_dare"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"/>

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                style="@style/LoginEditTextStyleSmall"
                />


            <EditText
                android:id="@+id/pwd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:paddingTop="@dimen/small_edit_text_margin"
                style="@style/LoginEditTextStyleSmall"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout"
                android:layout_gravity="center_horizontal">


                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    style="@style/LoginButtonStyleSmall"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    style="@style/LoginButtonStyleSmall"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/leaves_blowing_left_small"
                android:adjustViewBounds="true"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
