<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.coconuts.ariel.thelovedareproject.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cover"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                />

            <EditText
                android:id="@+id/register_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                style="@style/LoginEditTextStyleSmall"
                />


            <EditText
                android:id="@+id/register_pwd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:paddingTop="@dimen/small_edit_text_margin"
                style="@style/LoginEditTextStyleSmall"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearLayout"
                android:layout_marginLeft="10dp"
                >
                <!--android:layout_marginLeft="50dp"-->
                <!--android:layout_marginTop="5dp"-->


                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_text"

                    style="@style/LoginButtonStyleSmall"
                    android:layout_marginRight="5dp"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/leaves_blowing_right_large"
                android:adjustViewBounds="true"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

